# local-voice-reception

./: .dockerignore  .gitignore  .mise.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt
config/: pronunciation_dict.yaml  settings.yaml  stt_dictionary.yaml
data/knowledge/: .gitkeep
data/voice_samples/: .gitkeep
docs/: ARCHITECTURE.md  REQUIREMENTS.md  SETUP_M4_MAC.md  TTS_COMPARISON.md  UI_IMPROVEMENT_PROPOSAL.md
models/: .gitkeep
scripts/: download_models.py  setup_local.sh
src/: __init__.py  app.py
src/llm/: __init__.py  knowledge.py  ollama_client.py
src/stt/: __init__.py  dictionary.py  vosk_stt.py
src/tts/: __init__.py  qwen_tts.py
src/utils/: __init__.py  device.py
tests/: conftest.py  test_app.py  test_integration.py  test_knowledge.py  test_qwen_tts.py  test_stt_dictionary.py
